# fortios-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FortiOS 7.6 FortiOS 7.6.6 Configuration API alertemail.json  FortiOS 7.6 FortiOS 7.6.6 Configuration API antivirus.json  FortiOS 7.6 FortiOS 7.6.6 Configuration API emailfilter.json  FortiOS 7.6 FortiOS 7.6.6 Configuration API log.json  FortiOS 7.6 FortiOS 7.6.6 Configuration API switch-controller (1).json  FortiOS 7.6 FortiOS 7.6.6 Configuration API telemetry-controller.json  FortiOS 7.6 FortiOS 7.6.6 Configuration API web-proxy.json  FortiOS 7.6 FortiOS 7.6.6 Monitor API wanopt.json  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
api-docs/: Configuration API dlp.json  Configuration API ssh-filter.json  FortiOS 7.6 FortiOS 7.6.6 Configuration API vpn.json  FortiOS 7.6 FortiOS 7.6.6 Configuration API wanopt.json  FortiOS 7.6 FortiOS 7.6.6 Monitor API system.json  Monitor API webcache.json  Service API system.json
docs/: UPDATING.md  installation.md
src/fortios_mcp/: __init__.py  __main__.py  server.py
src/fortios_mcp/api/: __init__.py  client.py
src/fortios_mcp/tools/: __init__.py  diagnostic_tools.py  firewall_tools.py  generic_tools.py  log_tools.py  monitor_tools.py  routing_tools.py  schema_tools.py  security_profile_tools.py  system_tools.py  user_tools.py  vpn_tools.py
src/fortios_mcp/utils/: config.py  errors.py  swagger.py  validation.py
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_curated_tools.py  test_firewall_tools.py  test_generic_tools.py  test_swagger.py  test_validation.py  test_write_guard.py
tests/integration/: test_real_system.py
