[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fortios-mcp"
version = "0.1.0"
description = "Model Context Protocol server for FortiOS (FortiGate) REST API v2 — configuration, troubleshooting, monitoring, review"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "FreddyMcFett" }]
keywords = ["mcp", "fortios", "fortigate", "fortinet", "firewall", "network", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "starlette>=0.37.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "python-semantic-release>=9.0.0",
]

[project.scripts]
fortios-mcp = "fortios_mcp.server:main"

[project.urls]
Homepage = "https://github.com/FreddyMcFett/fortios-mcp"
Issues = "https://github.com/FreddyMcFett/fortios-mcp/issues"
Changelog = "https://github.com/FreddyMcFett/fortios-mcp/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/fortios_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"api-docs" = "fortios_mcp/api-docs"

[tool.hatch.build.targets.sdist]
include = ["src/fortios_mcp", "api-docs", "README.md", "CHANGELOG.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=src/fortios_mcp",
    "--cov-report=term-missing",
]
markers = [
    "integration: marks tests as integration tests (requires real FortiGate)",
]

[tool.semantic_release]
version_variables = ["src/fortios_mcp/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install build && python -m build"
commit_message = "chore(release): {version} [skip ci]"
tag_format = "v{version}"
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "chore", "style", "test", "ci", "build"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.changelog]
changelog_sections = [
    { section = "Features", type = "feat" },
    { section = "Bug Fixes", type = "fix" },
    { section = "Performance", type = "perf" },
    { section = "Documentation", type = "docs" },
]
